Preserve Minecraft 1.21.1 release baseline and accumulated fixes